--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,17 @@
 	<title>Temp Monitoring</title>
 </head>
 <body>
-<h1>Testing local server</h1>
+<div style="margin: 10% auto; text-align: center"><h1>Current Temp: <span id="temp"></span></h1></div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script>
+	$(document).ready(function () {
+		$.get('/current-temp').then(function (temp) {
+		    $('#temp').text(temp);
+		}).catch(function (err) {
+		    alert("didn't get temp \n" + err);
+		});
+	});
+</script>
 </body>
 </html>
