starting to add styling.

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Temp Monitoring</title>
+
+	<link rel="stylesheet" href="/styles/bootstrap.min.css">
 </head>
 <body>
-<div style="margin: 10% auto; text-align: center"><h1>Current Temp: <span id="temp"></span></h1></div>
+<div style="margin: 10% auto; text-align: center"><h1>Current Temp: <span id="temp"></span></h1></div> 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script>
