--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Temp Monitoring</title>
 
-	<link rel="stylesheet" href="/styles/bootstrap.min.css">
+	<link rel="stylesheet" href="/static/css/vendor/bootstrap.min.css">
 </head>
 <body>
-<div style="margin: 10% auto; text-align: center"><h1>Current Temp: <span id="temp"></span></h1></div> 
+<div style="margin: 10% auto; text-align: center"><h1>Current Temp: <span id="temp"></span></h1></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script>
