--- a/templates/index.html
+++ b/templates/index.html
@@ -7,17 +7,12 @@
 	<link rel="stylesheet" href="/static/css/vendor/bootstrap.min.css">
 </head>
 <body>
-<div style="margin: 10% auto; text-align: center"><h1>Current Temp: <span id="temp"></span></h1></div>
+<div class="panel panel-info">
+	<<h1>Current Temp: <span id="currentTemp"></span></h1>
+</div>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script>
-	$(document).ready(function () {
-		$.get('/current-temp').then(function (temp) {
-		    $('#temp').text(temp);
-		}).catch(function (err) {
-		    alert("didn't get temp \n" + err);
-		});
-	});
-</script>
+<script src="/static/js/main.js"></script>
 </body>
 </html>
