--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,15 @@
 	<title>Temp Monitoring</title>
 
 	<link rel="stylesheet" href="/static/css/vendor/bootstrap.min.css">
+	<link rel="stylesheet" href="/static/css/main.css">
 </head>
 <body>
-<div class="panel panel-info">
-	<<h1>Current Temp: <span id="currentTemp"></span></h1>
+<div class="main">
+	<div class="panel panel-info content">
+		<h1>Current Temp: <span id="currentTemp"></span></h1>
+	</div>
 </div>
+
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
