--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,12 @@
 </head>
 <body>
 <div class="main">
-	<div class="panel panel-info content">
-		<h1>Current Temp: <span id="currentTemp"></span></h1>
+	<div class="content">
+		<div class="panel panel-info">
+			<h1>Current Temp: <span id="currentTemp"></span></h1>
+		</div>
 	</div>
+
 </div>
 
 
