--- a/templates/index.html
+++ b/templates/index.html
@@ -11,13 +11,13 @@
 <div class="main">
 	<div class="content">
 		<div class="panel panel-info">
-			<h1>Current Temp: <span id="currentTemp"></span></h1>
+			<div class="panel-heading"></div>
+			<div class="panel-body">
+				<h1>Current Temp: <span id="currentTemp"></span></h1>
+			</div>
 		</div>
 	</div>
-
 </div>
-
-
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="/static/js/main.js"></script>
