--- a/templates/index.html
+++ b/templates/index.html
@@ -10,14 +10,61 @@
 <body>
 <div class="main">
 	<div class="content">
-		<div class="panel panel-info">
-			<div class="panel-heading"></div>
+
+		<div class="panel panel-default">
+			<div class="panel-heading">Settings</div>
 			<div class="panel-body">
-				<h1>Current Temp: <span id="currentTemp"></span></h1>
+				<div class="form-group">
+					<label class="col-lg-2 control-label">Mode</label>
+					<div class="col-lg-10">
+						<div class="radio">
+							<label>
+								<input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
+								Heat
+							</label>
+						</div>
+						<div class="radio">
+							<label>
+								<input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+								AC
+							</label>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
+
+		<div class="panel panel-primary">
+			<div class="panel-heading">
+				<h3 class="panel-title">Downstairs: Current Temp / Target Temp </h3>
+			</div>
+			<div class="panel-body">
+				<h2><span id="downCurrentTemp"></span> / <span id="downTargetTemp"></span></h2>
+				<div class="btn-group-vertical">
+					<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-chevron-up"></span></a>
+					<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-chevron-down"></span></a>
+				</div>
+			</div>
+		</div>
+
+		<div class="panel panel-warning">
+			<div class="panel-heading">
+				<h3 class="panel-title">Upstairs: Current Temp / Target Temp </h3>
+			</div>
+			<div class="panel-body">
+				<h2><span id="upCurrentTemp"></span> / <span id="upTargetTemp"></span></h2>
+				<div class="btn-group-vertical">
+					<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-chevron-up"></span></a>
+					<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-chevron-down"></span></a>
+				</div>
+			</div>
+		</div>
+
 	</div>
+
 </div>
+
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="/static/js/main.js"></script>
