--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 	<div class="content">
 
 		<div class="panel panel-default">
-			<div class="panel-heading"><h1>Settings</h1></div>
+			<div class="panel-heading"><h2>Settings</h2></div>
 			<div class="panel-body">
 				<div class="form-group">
 					<label class="col-lg-2 control-label">Mode</label>
@@ -37,32 +37,30 @@
 
 		<div class="panel panel-primary">
 			<div class="panel-heading">
-				<div class="panel-title"><h1>Downstairs: Current Temp / Target Temp</h1></div>
+				<div class="panel-title"><h2>Downstairs: Current Temp / Target Temp</h2></div>
 			</div>
 			<div class="panel-body">
 				<h2><span id="downCurrentTemp"></span> / <span id="downTargetTemp"></span></h2>
 				<div class="btn-group-vertical">
-					<a href="#" class="btn btn-default"><span class="fa fa-chevron-up" aria-hidden="true"></span></a>
-					<a href="#" class="btn btn-default"><span class="fa fa-chevron-down" aria-hidden="true"></span></a>
+					<a href="#" class="btn btn-default"><span class="fa fa-chevron-up fa-4x" aria-hidden="true"></span></a>
+					<a href="#" class="btn btn-default"><span class="fa fa-chevron-down fa-4x" aria-hidden="true"></span></a>
 				</div>
 			</div>
 		</div>
 
 		<div class="panel panel-warning">
 			<div class="panel-heading">
-				<div class="panel-title"><h1>Upstairs: Current Temp / Target Temp</h1></div>
+				<div class="panel-title"><h2>Upstairs: Current Temp / Target Temp</h2></div>
 			</div>
 			<div class="panel-body">
 				<h2><span id="upCurrentTemp"></span> / <span id="upTargetTemp"></span></h2>
 				<div class="btn-group-vertical controls">
-					<a href="#" class="btn btn-default"><span class="fa fa-chevron-up" aria-hidden="true"></span></a>
-					<a href="#" class="btn btn-default"><span class="fa fa-chevron-down" aria-hidden="true"></span></a>
+					<a href="#" class="btn btn-default"><span class="fa fa-chevron-up fa-4x" aria-hidden="true"></span></a>
+					<a href="#" class="btn btn-default"><span class="fa fa-chevron-down fa-4x" aria-hidden="true"></span></a>
 				</div>
 			</div>
 		</div>
-
 	</div>
-
 </div>
 
 
