--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,11 +1,22 @@
 .main {
     height: 100vh;
     width: 100vw;
-    background-color: #a6a6a6;
+    background-color: rgba(166, 166, 166, 0.28);
 }
 
 .content {
     margin: 0 auto;
     min-width: 600px;
     min-height: 100vh;
+}
+
+.panel-body {
+    position: relative;
+}
+
+.controls {
+    position: absolute;
+    right: 12px;
+    top: 50%;
+    transform: translateY(-50%);
 }
