--- a/templates/index.html
+++ b/templates/index.html
@@ -40,10 +40,10 @@
 				<div class="panel-title"><h2>Downstairs: Current Temp / Target Temp</h2></div>
 			</div>
 			<div class="panel-body">
-				<h2><span id="downCurrentTemp"></span> / <span id="downTargetTemp"></span></h2>
-				<div class="btn-group-vertical">
-					<a href="#" class="btn btn-default"><span class="fa fa-chevron-up fa-4x" aria-hidden="true"></span></a>
-					<a href="#" class="btn btn-default"><span class="fa fa-chevron-down fa-4x" aria-hidden="true"></span></a>
+				<div class="temps"><span id="thermoCurrentTemp"></span> / <span id="thermoTargetTemp"></span></div>
+				<div class="btn-group-vertical controls">
+					<a href="#" class="btn btn-lg"><span class="fa fa-chevron-up fa-5x" aria-hidden="true"></span></a>
+					<a href="#" class="btn btn-lg"><span class="fa fa-chevron-down fa-5x" aria-hidden="true"></span></a>
 				</div>
 			</div>
 		</div>
@@ -53,10 +53,10 @@
 				<div class="panel-title"><h2>Upstairs: Current Temp / Target Temp</h2></div>
 			</div>
 			<div class="panel-body">
-				<h2><span id="upCurrentTemp"></span> / <span id="upTargetTemp"></span></h2>
+				<div class="temps"><span id="piCurrentTemp"></span> / <span id="piTargetTemp"></span></div>
 				<div class="btn-group-vertical controls">
-					<a href="#" class="btn btn-default"><span class="fa fa-chevron-up fa-4x" aria-hidden="true"></span></a>
-					<a href="#" class="btn btn-default"><span class="fa fa-chevron-down fa-4x" aria-hidden="true"></span></a>
+					<a href="#" class="btn btn-lg"><span class="fa fa-chevron-up fa-5x" aria-hidden="true"></span></a>
+					<a href="#" class="btn btn-lg"><span class="fa fa-chevron-down fa-5x" aria-hidden="true"></span></a>
 				</div>
 			</div>
 		</div>
