--- a/templates/index.html
+++ b/templates/index.html
@@ -40,10 +40,10 @@
 				<div class="panel-title"><h2>Downstairs: Current Temp / Target Temp</h2></div>
 			</div>
 			<div class="panel-body">
-				<div class="temps"><span id="thermoCurrentTemp"></span> / <span id="thermoTargetTemp"></span></div>
+				<div class="temps"><span id="thermoCurrentTemp">68</span> / <span id="thermoTargetTemp">68</span></div>
 				<div class="btn-group-vertical controls">
-					<a href="#" class="btn btn-lg"><span class="fa fa-chevron-up fa-5x" aria-hidden="true"></span></a>
-					<a href="#" class="btn btn-lg"><span class="fa fa-chevron-down fa-5x" aria-hidden="true"></span></a>
+					<a href="#" class="btn btn-default btn-lg"><span class="fa fa-chevron-up fa-5x" aria-hidden="true"></span></a>
+					<a href="#" class="btn btn-default btn-lg"><span class="fa fa-chevron-down fa-5x" aria-hidden="true"></span></a>
 				</div>
 			</div>
 		</div>
@@ -53,10 +53,10 @@
 				<div class="panel-title"><h2>Upstairs: Current Temp / Target Temp</h2></div>
 			</div>
 			<div class="panel-body">
-				<div class="temps"><span id="piCurrentTemp"></span> / <span id="piTargetTemp"></span></div>
+				<div class="temps"><span id="piCurrentTemp"></span> / <span id="piTargetTemp">70</span></div>
 				<div class="btn-group-vertical controls">
-					<a href="#" class="btn btn-lg"><span class="fa fa-chevron-up fa-5x" aria-hidden="true"></span></a>
-					<a href="#" class="btn btn-lg"><span class="fa fa-chevron-down fa-5x" aria-hidden="true"></span></a>
+					<a href="#" class="btn btn-default btn-lg"><span class="fa fa-chevron-up fa-5x" aria-hidden="true"></span></a>
+					<a href="#" class="btn btn-default btn-lg"><span class="fa fa-chevron-down fa-5x" aria-hidden="true"></span></a>
 				</div>
 			</div>
 		</div>
