--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 			</div>
 		</div>
 
-		<div class="panel panel-primary">
+		<div class="panel panel-primary large">
 			<div class="panel-heading">
 				<div class="panel-title"><h2>Downstairs: Current Temp / Target Temp</h2></div>
 			</div>
@@ -48,7 +48,7 @@
 			</div>
 		</div>
 
-		<div class="panel panel-warning">
+		<div class="panel panel-warning large">
 			<div class="panel-heading">
 				<div class="panel-title"><h2>Upstairs: Current Temp / Target Temp</h2></div>
 			</div>
